   --chartab command line argument
  * Removed dvb-modules reloading code (Closes: #512362)
  * Added bash completion for svdrpesend (taken from yaVDR / Lars Hanisch)
  * Added systemd support
  * Removed ENABLED setting from /etc/default/vdr - the vdr daemon is now
    enabled by default and might be disabled manuall via update-rc.d / systemctl

 -- Tobias Grimm <etobi@debian.org>  Tue, 15 Sep 2015 23:53:12 +0200

vdr (2.0.6-2) unstable; urgency=medium

  * Merged from Jessie-version 2.0.3-3: Fixed use of getent in postinst script
    for detecting existing vdr user and group (Closes: #770773)
  * Standards-Version: 3.9.6

 -- Tobias Grimm <etobi@debian.org>  Mon, 08 Dec 2014 22:48:55 +0100

vdr (2.0.6-1) unstable; urgency=medium

  * New upstream release
  * Standards-Version: 3.9.5
  * Source /lib/lsb/init-functions in init script
  * Replaced ttf-freefont by fonts-freefont-ttf (Closes: #738254)

 -- Tobias Grimm <etobi@debian.org>  Sun, 26 Oct 2014 12:01:40 +0100

vdr (2.0.3-3) testing; urgency=medium

  * Fixed use of getent in postinst script for detecting existing vdr user and
    group (Closes: #770773)

 -- Tobias Grimm <etobi@debian.org>  Mon, 08 Dec 2014 00:20:19 +0100

vdr (2.0.3-2) unstable; urgency=medium

  * Fix "unhandled symlink to directory conversion of vdr-dbg (Closes: #736297)

 -- Tobias Grimm <etobi@debian.org>  Mon, 31 Mar 2014 22:57:52 +0200

vdr (2.0.3-1) unstable; urgency=low

  * New upstream release
  * Install sample channels.conf's to /usr/share/vdr/examples/ (Closes: #709749)

 -- Tobias Grimm <etobi@debian.org>  Wed, 04 Sep 2013 13:53:51 +0200

vdr (2.0.2-1) unstable; urgency=low

  * New upstream release
  * vdr-plugin-dvbhddevice and vdr-plugin-examples Replaces/Breaks
    vdr << 2.0.1-1 - manpages have been moved from vdr into the plugin
    packages  (Closes: #709152)

 -- Tobias Grimm <etobi@debian.org>  Sat, 25 May 2013 09:12:01 +0200

vdr (2.0.1-2) unstable; urgency=low
