@@ -9,17 +9,17 @@
 
 writewarning ()
 {
-echo -e \
-"#\n"\
-"# This file is automatically generated by the vdr init-script. You can\n"\
-"# define custom commands in /etc/vdr/command-hooks/$1.custom.conf\n"\
-"# (see /usr/share/doc/vdr/README.Debian.gz).\n"\
-"#\n\n\n"
+cat > "$2" <<EOF
+# This file is automatically generated by the vdr init-script. You can
+# define custom commands in /etc/vdr/command-hooks/$1.custom.conf
+# (see /usr/share/doc/vdr/README.Debian.gz).
+
+EOF
 }
 
 cmdtype=$1
 cmdfile="/var/cache/vdr/$cmdtype.conf"
 
-writewarning $cmdtype > "$cmdfile"
+writewarning $cmdtype "$cmdfile"
 
 find $CMDHOOKSDIR -maxdepth 1 -name "$cmdtype.*.conf" | sort | xargs cat >> "$cmdfile"
