@@ -19,6 +19,7 @@ vdr (2.2.0-1) unstable; urgency=medium
   * Added systemd support
   * Removed ENABLED setting from /etc/default/vdr - the vdr daemon is now
     enabled by default and might be disabled manuall via update-rc.d / systemctl
+  * Removed bashism from merge-commands.conf (Closes: #799483)
 
  -- Tobias Grimm <etobi@debian.org>  Tue, 15 Sep 2015 23:53:12 +0200
 
